successfully parse the name

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
         <button id ="myButton">Add one element</button>
 
+
+        <form action="/test" method="post">
+            <input type="text" name="name" value="Mick">
+            <input type="submit" value="Submit">
+        </form>
+
         <script>
 
          function addNewRow(elem, table, text) {
